chatview: fix qt specific spacing around the send message area

--- a/src/web-chatview/chatview-windows.css
+++ b/src/web-chatview/chatview-windows.css
@@ -184,21 +184,21 @@ pre {
 .nav-button {
     width: 30px;
     height: 30px;
-    margin: 8px;
+    margin: 6px;
     padding: 2px;
-    display: flex;
-    cursor: pointer;
-    align-self: center;
-    border-radius: 16px;
 }
 
 .nav-button.deactivated {
     width: 30px;
     height: 30px;
-    margin: 8px;
+    margin: 6px;
     padding: 2px;
-    align-self: center;
-    display: flex;
-    border-radius: 16px;
-    cursor: auto;
+}
+
+#sendMessage {
+    padding: 7px;
+}
+
+#message {
+    margin: 0 16px 2px 16px;
 }
